--- a/index.html
+++ b/index.html
@@ -117,11 +117,15 @@
 
     <!-- Desktop with links represented as icons -->
 <div id="desktop">
-    <a href="" class="icon" style="top: 0px; left: 50px;" target="_blank">
+    <a href="assets/IMG_1492.png" class="icon" style="top: 0px; left: 50px;" target="_blank">
         <img src="https://gorbaganachain.xyz" alt="Gorbagana">
         <span>Gorbagana</span>
     </a>
 
+    <a href="assets/Untitled.png" class="icon" style="top: 0px; left: 50px;" target="_blank">
+        <img src="" alt="Trash">
+        <span>Trash</span>
+    </a>
     
 </div>
 
