--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 
     <!-- Desktop with links represented as icons -->
 <div id="desktop">
-    <a href="/assets/IMG_1492.png" class="icon" style="top: 0px; left: 50px;" target="_blank">
-        <img src="https://gorbaganachain.xyz" alt="Gorbagana">
+    <a href="https://gorbaganachain.xyz" class="icon" style="top: 0px; left: 50px;" target="_blank">
+        <img src="/assets/IMG_1492.png" alt="Gorbagana">
         <span>Gorbagana</span>
     </a>
 
-    <a href="/assets/Untitled.png" class="icon" style="top: 100px; left: 50px;" target="_blank">
-        <img src="" alt="Trash">
+    <a href="" class="icon" style="top: 100px; left: 50px;" target="_blank">
+        <img src="/assets/Untitled.png" alt="Trash">
         <span>Trash</span>
     </a>
     
