--- a/index.html
+++ b/index.html
@@ -119,10 +119,20 @@
 <div id="desktop">
     <a href="https://gorbaganachain.xyz" class="icon" style="top: 0px; left: 50px;" target="_blank">
         <img src="/assets/IMG_1492.png" alt="Gorbagana">
-        <span>Gorbagana</span>
+        <span>GorbaganaChain</span>
     </a>
 
-    <a href="" class="icon" style="top: 100px; left: 50px;" target="_blank">
+    <a href="https://magiceden.us/marketplace/gorbagio" class="icon" style="top: 100px; left: 50px;" target="_blank">
+        <img src="/assets/IMG_1515.png" alt="Gorbagio">
+        <span>Gorbagio</span>
+    </a>
+
+    <a href="https://backpack.app" class="icon" style="top: 200px; left: 50px;" target="_blank">
+        <img src="/assets/IMG_1514.png" alt="Trash">
+        <span>Backpack</span>
+    </a>
+    
+    <a href="" class="icon" style="top: 0px; left: 150px;" target="_blank">
         <img src="/assets/Untitled.png" alt="Trash">
         <span>Trash</span>
     </a>
