--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 <div id="desktop">
     <a href="https://gorbaganachain.xyz" class="icon" style="top: 0px; left: 50px;" target="_blank">
         <img src="/assets/IMG_1492.png" alt="Gorbagana">
-        <span>GorbaganaChain</span>
+        <span>Gorbagana</span>
     </a>
 
     <a href="https://magiceden.us/marketplace/gorbagio" class="icon" style="top: 100px; left: 50px;" target="_blank">
-        <img src="/assets/IMG_1515.png" alt="Gorbagio">
+        <img src="/assets/IMG_1515.jpeg" alt="Gorbagio">
         <span>Gorbagio</span>
     </a>
 
@@ -132,7 +132,7 @@
         <span>Backpack</span>
     </a>
     
-    <a href="" class="icon" style="top: 0px; left: 150px;" target="_blank">
+    <a href="" class="icon" style="top: 300px; left: 50px;" target="_blank">
         <img src="/assets/Untitled.png" alt="Trash">
         <span>Trash</span>
     </a>
